--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ kumpleto kamoy nyo asta newyear ha AHHAHHAHAHHAH WISH U ALL THE BEST GUYS
 </div>
 
 <!-- New Year Message -->
-<div class="message" id="newyear">
+<div class="message" id="newyear2">
     <div class="message-box">
         <h2>🎉 way pa unod guys di pa newyear</h2>
         <p>
