--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ button:hover {
         <button class="christmas" onclick="showMessage('christmas')">
             🎄 Christmas
         </button>
-        <button class="newyear" onclick="showMessage('newyear')">
+        <button class="newyear" onclick="showMessage('newyear2')">
             🎉 New Year
         </button>
     </div>
@@ -144,7 +144,7 @@ kumpleto kamoy nyo asta newyear ha AHHAHHAHAHHAH WISH U ALL THE BEST GUYS
 </div>
 
 <!-- New Year Message -->
-<div class="message" id="newyear2">
+<div class="message" id="newyear">
     <div class="message-box">
         <h2>🎉 way pa unod guys di pa newyear</h2>
         <p>
